--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@
 /depricated versions/
 /web/images/
 /customLog/
-/web/config/
 /Datenbank/
 /errorlog/
 /logs/
+/web/myFIS/nbproject/private/
+/myFIS/nbproject/private/
+/myFIS/
+/SQL/
